--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap");
+
+* {
+  font-family: "Space Grotesk", sans-serif;
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+form {
+  padding: 10px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
 }
+
+input {
+  margin-bottom: 15px;
+  padding: 10px 20px;
+  border-radius: 3px;
+  outline: none;
+  border: 1px solid #ddd;
+}
+
+h3 {
+  margin: 15px 0;
+}
+
+button {
+  padding: 15px;
+  cursor: pointer;
+  outline: none;
+  background-color: #5d3891;
+  border: none;
+  color: #f5f5f5;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 3px;
+}
+
